--- a/assets/scss/pages/_create-account.scss
+++ b/assets/scss/pages/_create-account.scss
@@ -72,7 +72,7 @@
     padding: 1rem 0.5rem;
   }
 
-  &__buttons {
+  &__buttons-wrapper {
     align-self: flex-end;
     display: flex;
     width: 27.125rem;
